--- a/genindex.html
+++ b/genindex.html
@@ -79,8 +79,12 @@
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#Z"><strong>Z</strong></a>
  
 </div>
 <h2 id="_">_</h2>
@@ -110,14 +114,44 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.bore_rock_reached">bore_rock_reached (pygef.bore.BoreData attribute)</a>
+</li>
       <li><a href="tree/reference.html#pygef.bore.BoreData">BoreData (class in pygef.bore)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.bro_id">bro_id (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.bro_id">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_diameter">cone_diameter (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_surface_area">cone_surface_area (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_surface_quotient">cone_surface_quotient (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_distance">cone_to_friction_sleeve_distance (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_surface_area">cone_to_friction_sleeve_surface_area (pygef.cpt.CPTData attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cone_to_friction_sleeve_surface_quotient">cone_to_friction_sleeve_surface_quotient (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cpt_description">cpt_description (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cpt_standard">cpt_standard (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.cpt_type">cpt_type (pygef.cpt.CPTData attribute)</a>
+</li>
       <li><a href="tree/reference.html#pygef.cpt.CPTData">CPTData (class in pygef.cpt)</a>
 </li>
   </ul></td>
@@ -126,12 +160,58 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.data">data (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.data">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.delivered_location">delivered_location (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.delivered_location">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.delivered_vertical_position_datum">delivered_vertical_position_datum (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.delivered_vertical_position_datum">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.delivered_vertical_position_offset">delivered_vertical_position_offset (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.delivered_vertical_position_offset">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.delivered_vertical_position_reference_point">delivered_vertical_position_reference_point (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.delivered_vertical_position_reference_point">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
       <li><a href="tree/reference.html#pygef.bore.BoreData.display_attributes">display_attributes() (pygef.bore.BoreData method)</a>
 
       <ul>
         <li><a href="tree/reference.html#pygef.cpt.CPTData.display_attributes">(pygef.cpt.CPTData method)</a>
 </li>
       </ul></li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.dissipationtest_performed">dissipationtest_performed (pygef.cpt.CPTData attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.final_bore_depth">final_bore_depth (pygef.bore.BoreData attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.final_depth">final_depth (pygef.cpt.CPTData attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -144,6 +224,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.plotting.plot_cpt">plot_cpt() (in module pygef.plotting)</a>
 </li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.predrilled_depth">predrilled_depth (pygef.cpt.CPTData attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Q">Q</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.quality_class">quality_class (pygef.cpt.CPTData attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -152,9 +242,67 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.shim.read_bore">read_bore() (in module pygef.shim)</a>
 </li>
+      <li><a href="tree/reference.html#pygef.shim.read_cpt">read_cpt() (in module pygef.shim)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.shim.read_cpt">read_cpt() (in module pygef.shim)</a>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.research_report_date">research_report_date (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.research_report_date">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.standardized_location">standardized_location (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.standardized_location">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Z">Z</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_cone_resistance_after">zlm_cone_resistance_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_cone_resistance_before">zlm_cone_resistance_before (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_inclination_ew_after">zlm_inclination_ew_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_inclination_ew_before">zlm_inclination_ew_before (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_inclination_ns_after">zlm_inclination_ns_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_inclination_ns_before">zlm_inclination_ns_before (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_inclination_resultant_after">zlm_inclination_resultant_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_inclination_resultant_before">zlm_inclination_resultant_before (pygef.cpt.CPTData attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_local_friction_after">zlm_local_friction_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_local_friction_before">zlm_local_friction_before (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_pore_pressure_u1_after">zlm_pore_pressure_u1_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_pore_pressure_u1_before">zlm_pore_pressure_u1_before (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_pore_pressure_u2_after">zlm_pore_pressure_u2_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_pore_pressure_u2_before">zlm_pore_pressure_u2_before (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_pore_pressure_u3_after">zlm_pore_pressure_u3_after (pygef.cpt.CPTData attribute)</a>
+</li>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData.zlm_pore_pressure_u3_before">zlm_pore_pressure_u3_before (pygef.cpt.CPTData attribute)</a>
 </li>
   </ul></td>
 </tr></table>
