--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -96,6 +96,49 @@
 
 <div class="viewcode-block" id="CPTData"><a class="viewcode-back" href="../../tree/reference.html#pygef.cpt.CPTData">[docs]</a><span class="nd">@dataclass</span>
 <span class="k">class</span> <span class="nc">CPTData</span><span class="p">:</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    The CPT dataclass holds the information from the CPT object.</span>
+
+<span class="sd">    Attributes:</span>
+<span class="sd">        bro_id (str | None): BRO ID of the CPT.</span>
+<span class="sd">        research_report_date (date): research report date</span>
+<span class="sd">        delivered_location (Location): delivered location in `EPSG:28992 - RD new`</span>
+<span class="sd">        standardized_location (Location | None): standardized location in `EPSG:4326 - WGS 84`</span>
+<span class="sd">        delivered_vertical_position_offset (float | None): delivered vertical position offset</span>
+<span class="sd">        delivered_vertical_position_datum (str): research delivered vertical position datum</span>
+<span class="sd">        delivered_vertical_position_reference_point (str): delivered vertical position reference point</span>
+<span class="sd">        cpt_standard (str | None): cpt standard</span>
+<span class="sd">        dissipationtest_performed (bool | None): dissipationtest performed</span>
+<span class="sd">        quality_class (QualityClass): quality class</span>
+<span class="sd">        predrilled_depth (float): predrilled depth</span>
+<span class="sd">        final_depth (float): final depth</span>
+<span class="sd">        cpt_description (str): cpt description</span>
+<span class="sd">        cpt_type (str): cpt type</span>
+<span class="sd">        cone_surface_area (int): cone_surface_area</span>
+<span class="sd">        cone_diameter (int | None): cone_diameter</span>
+<span class="sd">        cone_surface_quotient (float | None): cone_surface_quotient</span>
+<span class="sd">        cone_to_friction_sleeve_distance (int | None): cone_to_friction_sleeve_distance</span>
+<span class="sd">        cone_to_friction_sleeve_surface_area (int | None): cone_to_friction_sleeve_surface_area</span>
+<span class="sd">        cone_to_friction_sleeve_surface_quotient (float | None): cone_to_friction_sleeve_surface_quotient</span>
+<span class="sd">        zlm_cone_resistance_before (float): zlm_cone_resistance_before</span>
+<span class="sd">        zlm_cone_resistance_after (float): zlm_cone_resistance_after</span>
+<span class="sd">        zlm_inclination_ew_before (int | None): zlm_inclination_ew_before</span>
+<span class="sd">        zlm_inclination_ew_after (int | None): zlm_inclination_ew_after</span>
+<span class="sd">        zlm_inclination_ns_before (int | None): zlm_inclination_ns_before</span>
+<span class="sd">        zlm_inclination_ns_after (int | None): zlm_inclination_ns_after</span>
+<span class="sd">        zlm_inclination_resultant_before (int | None): zlm_inclination_resultant_before</span>
+<span class="sd">        zlm_inclination_resultant_after (int | None): zlm_inclination_resultant_after</span>
+<span class="sd">        zlm_local_friction_before (float | None): zlm_local_friction_before</span>
+<span class="sd">        zlm_local_friction_after (float | None): zlm_local_friction_after</span>
+<span class="sd">        zlm_pore_pressure_u1_before (float | None): zlm_pore_pressure_u1_before</span>
+<span class="sd">        zlm_pore_pressure_u2_before (float | None): zlm_pore_pressure_u2_before</span>
+<span class="sd">        zlm_pore_pressure_u3_before (float | None): zlm_pore_pressure_u3_before</span>
+<span class="sd">        zlm_pore_pressure_u1_after (float | None): zlm_pore_pressure_u1_after</span>
+<span class="sd">        zlm_pore_pressure_u2_after (float | None): zlm_pore_pressure_u2_after</span>
+<span class="sd">        zlm_pore_pressure_u3_after (float | None): zlm_pore_pressure_u3_after</span>
+<span class="sd">        data (pl.DataFrame): DataFrame</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+
     <span class="c1"># dispatch_document cpt</span>
     <span class="n">bro_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">research_report_date</span><span class="p">:</span> <span class="n">date</span>
