deploy: 1ca28c8b79fa32df69b09fccd8f8a041141e6bc5

--- a/_modules/pygef/bore.html
+++ b/_modules/pygef/bore.html
@@ -94,6 +94,7 @@
 <span class="sd">        bro_id (str | None): BRO ID of the BHRgt.</span>
 <span class="sd">        research_report_date (date): research report date</span>
 <span class="sd">        delivered_location (Location): delivered location in EPSG:28992 - RD new</span>
+<span class="sd">        groundwater_level (float | None): groundwater level</span>
 <span class="sd">        standardized_location (Location | None): standardized location in EPSG:4326 - WGS 84</span>
 <span class="sd">        delivered_vertical_position_offset (float | None): delivered vertical position offset</span>
 <span class="sd">        delivered_vertical_position_datum (str): research delivered vertical position datum</span>
@@ -108,6 +109,7 @@
     <span class="n">research_report_date</span><span class="p">:</span> <span class="n">date</span>
     <span class="n">description_procedure</span><span class="p">:</span> <span class="nb">str</span>
     <span class="n">delivered_location</span><span class="p">:</span> <span class="n">Location</span>
+    <span class="n">groundwater_level</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">standardized_location</span><span class="p">:</span> <span class="n">Location</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">delivered_vertical_position_offset</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="n">delivered_vertical_position_datum</span><span class="p">:</span> <span class="nb">str</span>
