--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -112,6 +112,7 @@
 <span class="sd">        quality_class (QualityClass): quality class</span>
 <span class="sd">        predrilled_depth (float): predrilled depth</span>
 <span class="sd">        final_depth (float): final depth</span>
+<span class="sd">        groundwater_level (float | None): groundwater level</span>
 <span class="sd">        cpt_description (str): cpt description</span>
 <span class="sd">        cpt_type (str): cpt type</span>
 <span class="sd">        cone_surface_area (int): cone_surface_area</span>
@@ -150,6 +151,7 @@
     <span class="n">quality_class</span><span class="p">:</span> <span class="n">QualityClass</span>
     <span class="n">predrilled_depth</span><span class="p">:</span> <span class="nb">float</span>
     <span class="n">final_depth</span><span class="p">:</span> <span class="nb">float</span>
+    <span class="n">groundwater_level</span><span class="p">:</span> <span class="nb">float</span> <span class="o">|</span> <span class="kc">None</span>
     <span class="c1"># conepenetrometer</span>
     <span class="n">cpt_description</span><span class="p">:</span> <span class="nb">str</span>
     <span class="n">cpt_type</span><span class="p">:</span> <span class="nb">str</span>
