--- a/_modules/pygef/shim.html
+++ b/_modules/pygef/shim.html
@@ -166,6 +166,7 @@
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;data&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">df</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;research_report_date&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;cpt_standard&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+    <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;groundwater_level&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">groundwater_level</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;dissipationtest_performed&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;quality_class&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">QualityClass</span><span class="p">(</span><span class="n">gef_cpt</span><span class="o">.</span><span class="n">cpt_class</span><span class="p">)</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;predrilled_depth&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_cpt</span><span class="o">.</span><span class="n">pre_excavated_depth</span>
@@ -247,6 +248,7 @@
     <span class="p">)</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;standardized_location&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;bro_id&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_bore</span><span class="o">.</span><span class="n">project_id</span>
+    <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;groundwater_level&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;research_report_date&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;description_procedure&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;unknown&quot;</span>
     <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;delivered_vertical_position_offset&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gef_bore</span><span class="o">.</span><span class="n">zid</span>
