--- a/genindex.html
+++ b/genindex.html
@@ -80,6 +80,7 @@
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
@@ -212,6 +213,18 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tree/reference.html#pygef.cpt.CPTData.final_depth">final_depth (pygef.cpt.CPTData attribute)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.groundwater_level">groundwater_level (pygef.bore.BoreData attribute)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.groundwater_level">(pygef.cpt.CPTData attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
